--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: #ffffff;
+    --background: #f5f5f5;
     --foreground: #171717;
     --color-primary: #8fc0a9;
   }
